srcef/analizador/Optimizador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> init
Rule 1     init -> etiquetas
Rule 2     init -> empty
Rule 3     etiquetas -> etiquetas etiqueta
Rule 4     etiquetas -> etiqueta
Rule 5     empty -> <empty>
Rule 6     etiqueta -> ID DOSP instrucciones
Rule 7     etiqueta -> ID DOSP empty
Rule 8     instrucciones -> instrucciones instruccion
Rule 9     instrucciones -> instruccion
Rule 10    instruccion -> imprimir_instr
Rule 11    instruccion -> asignacion
Rule 12    instruccion -> unset
Rule 13    instruccion -> exit
Rule 14    instruccion -> puntero
Rule 15    instruccion -> go_to
Rule 16    instruccion -> if_instruccion
Rule 17    instruccion -> conversion
Rule 18    instruccion -> acceso_lista_asigna
Rule 19    instruccion -> read
Rule 20    instruccion -> error
Rule 21    imprimir_instr -> IMPRIMIR PARIZQ tipo_var PARDER PTCOMA
Rule 22    imprimir_instr -> IMPRIMIR PARIZQ acceso_lista PARDER PTCOMA
Rule 23    imprimir_instr -> IMPRIMIR PARIZQ CADENA PARDER PTCOMA
Rule 24    imprimir_instr -> IMPRIMIR PARIZQ CADENA2 PARDER PTCOMA
Rule 25    expresion -> primitiva
Rule 26    expresion -> expresion_numerica
Rule 27    expresion -> expresion_relacional
Rule 28    expresion -> expresion_unaria
Rule 29    expresion -> expresion_logica
Rule 30    expresion -> expresion_bit_bit
Rule 31    expresion -> absoluto
Rule 32    go_to -> GOTO ID PTCOMA
Rule 33    if_instruccion -> IF PARIZQ expresion PARDER GOTO ID PTCOMA
Rule 34    exit -> EXIT PTCOMA
Rule 35    unset -> UNSET PARIZQ TEMP PARDER PTCOMA
Rule 36    unset -> UNSET PARIZQ PARAM PARDER PTCOMA
Rule 37    unset -> UNSET PARIZQ RET PARDER PTCOMA
Rule 38    unset -> UNSET PARIZQ PILA PARDER PTCOMA
Rule 39    read -> tipo_var IGUAL READ PARIZQ PARDER PTCOMA
Rule 40    asignacion -> tipo_var IGUAL expresion PTCOMA
Rule 41    asignacion -> tipo_var IGUAL ARRAY PARIZQ PARDER PTCOMA
Rule 42    puntero -> tipo_var IGUAL PAND tipo_var PTCOMA
Rule 43    conversion -> tipo_var IGUAL PARIZQ tipo_dato PARDER primitiva PTCOMA
Rule 44    tipo_dato -> INT
Rule 45    tipo_dato -> FLOAT
Rule 46    tipo_dato -> CHAR
Rule 47    tipo_var -> TEMP
Rule 48    tipo_var -> PARAM
Rule 49    tipo_var -> RET
Rule 50    tipo_var -> PILA
Rule 51    tipo_var -> RA
Rule 52    tipo_var -> PUNTERO
Rule 53    expresion_unaria -> MENOS primitiva
Rule 54    expresion_logica -> primitiva AND primitiva
Rule 55    expresion_logica -> primitiva OR primitiva
Rule 56    expresion_logica -> primitiva XOR primitiva
Rule 57    expresion_logica -> NOT primitiva
Rule 58    expresion_bit_bit -> primitiva PAND primitiva
Rule 59    expresion_bit_bit -> primitiva BOR primitiva
Rule 60    expresion_bit_bit -> primitiva XORR primitiva
Rule 61    expresion_bit_bit -> primitiva SHIFTI primitiva
Rule 62    expresion_bit_bit -> primitiva SHIFTD primitiva
Rule 63    expresion_bit_bit -> NOTR primitiva
Rule 64    expresion_relacional -> primitiva MENQUE primitiva
Rule 65    expresion_relacional -> primitiva MAYQUE primitiva
Rule 66    expresion_relacional -> primitiva MEIQUE primitiva
Rule 67    expresion_relacional -> primitiva MAIQUE primitiva
Rule 68    expresion_relacional -> primitiva IGUALQUE primitiva
Rule 69    expresion_relacional -> primitiva NIGUALQUE primitiva
Rule 70    expresion_numerica -> primitiva MAS primitiva
Rule 71    expresion_numerica -> primitiva MENOS primitiva
Rule 72    expresion_numerica -> primitiva POR primitiva
Rule 73    expresion_numerica -> primitiva DIVIDIDO primitiva
Rule 74    expresion_numerica -> primitiva RESTO primitiva
Rule 75    absoluto -> ABS PARIZQ primitiva PARDER
Rule 76    primitiva -> ENTERO
Rule 77    primitiva -> DECIMAL
Rule 78    primitiva -> CADENA
Rule 79    primitiva -> CADENA2
Rule 80    primitiva -> TEMP
Rule 81    primitiva -> PARAM
Rule 82    primitiva -> RET
Rule 83    primitiva -> PILA
Rule 84    primitiva -> RA
Rule 85    primitiva -> PUNTERO
Rule 86    primitiva -> acceso_lista
Rule 87    acceso_lista -> tipo_var accesos
Rule 88    acceso_lista_asigna -> tipo_var accesos IGUAL expresion PTCOMA
Rule 89    acceso_lista_asigna -> tipo_var accesos IGUAL ARRAY PARIZQ PARDER PTCOMA
Rule 90    accesos -> accesos acceso
Rule 91    accesos -> acceso
Rule 92    acceso -> CORIZQ primitiva CORDER

Terminals, with rules where they appear

ABS                  : 75
AND                  : 54
ARRAY                : 41 89
BOR                  : 59
CADENA               : 23 78
CADENA2              : 24 79
CHAR                 : 46
CORDER               : 92
CORIZQ               : 92
DECIMAL              : 77
DIVIDIDO             : 73
DOSP                 : 6 7
ENTERO               : 76
EXIT                 : 34
FLOAT                : 45
GOTO                 : 32 33
ID                   : 6 7 32 33
IF                   : 33
IGUAL                : 39 40 41 42 43 88 89
IGUALQUE             : 68
IMPRIMIR             : 21 22 23 24
INT                  : 44
MAIQUE               : 67
MAS                  : 70
MAYQUE               : 65
MEIQUE               : 66
MENOS                : 53 71
MENQUE               : 64
NIGUALQUE            : 69
NOT                  : 57
NOTR                 : 63
OR                   : 55
PAND                 : 42 58
PARAM                : 36 48 81
PARDER               : 21 22 23 24 33 35 36 37 38 39 41 43 75 89
PARIZQ               : 21 22 23 24 33 35 36 37 38 39 41 43 75 89
PILA                 : 38 50 83
POR                  : 72
PTCOMA               : 21 22 23 24 32 33 34 35 36 37 38 39 40 41 42 43 88 89
PUNTERO              : 52 85
RA                   : 51 84
READ                 : 39
RESTO                : 74
RET                  : 37 49 82
SHIFTD               : 62
SHIFTI               : 61
TEMP                 : 35 47 80
UNSET                : 35 36 37 38
XOR                  : 56
XORR                 : 60
error                : 20

Nonterminals, with rules where they appear

absoluto             : 31
acceso               : 90 91
acceso_lista         : 22 86
acceso_lista_asigna  : 18
accesos              : 87 88 89 90
asignacion           : 11
conversion           : 17
empty                : 2 7
etiqueta             : 3 4
etiquetas            : 1 3
exit                 : 13
expresion            : 33 40 88
expresion_bit_bit    : 30
expresion_logica     : 29
expresion_numerica   : 26
expresion_relacional : 27
expresion_unaria     : 28
go_to                : 15
if_instruccion       : 16
imprimir_instr       : 10
init                 : 0
instruccion          : 8 9
instrucciones        : 6 8
primitiva            : 25 43 53 54 54 55 55 56 56 57 58 58 59 59 60 60 61 61 62 62 63 64 64 65 65 66 66 67 67 68 68 69 69 70 70 71 71 72 72 73 73 74 74 75 92
puntero              : 14
read                 : 19
tipo_dato            : 43
tipo_var             : 21 39 40 41 42 42 43 87 88 89
unset                : 12

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . etiquetas
    (2) init -> . empty
    (3) etiquetas -> . etiquetas etiqueta
    (4) etiquetas -> . etiqueta
    (5) empty -> .
    (6) etiqueta -> . ID DOSP instrucciones
    (7) etiqueta -> . ID DOSP empty

    $end            reduce using rule 5 (empty -> .)
    ID              shift and go to state 5

    init                           shift and go to state 1
    etiquetas                      shift and go to state 2
    empty                          shift and go to state 3
    etiqueta                       shift and go to state 4

state 1

    (0) S' -> init .



state 2

    (1) init -> etiquetas .
    (3) etiquetas -> etiquetas . etiqueta
    (6) etiqueta -> . ID DOSP instrucciones
    (7) etiqueta -> . ID DOSP empty

    $end            reduce using rule 1 (init -> etiquetas .)
    ID              shift and go to state 5

    etiqueta                       shift and go to state 6

state 3

    (2) init -> empty .

    $end            reduce using rule 2 (init -> empty .)


state 4

    (4) etiquetas -> etiqueta .

    ID              reduce using rule 4 (etiquetas -> etiqueta .)
    $end            reduce using rule 4 (etiquetas -> etiqueta .)


state 5

    (6) etiqueta -> ID . DOSP instrucciones
    (7) etiqueta -> ID . DOSP empty

    DOSP            shift and go to state 7


state 6

    (3) etiquetas -> etiquetas etiqueta .

    ID              reduce using rule 3 (etiquetas -> etiquetas etiqueta .)
    $end            reduce using rule 3 (etiquetas -> etiquetas etiqueta .)


state 7

    (6) etiqueta -> ID DOSP . instrucciones
    (7) etiqueta -> ID DOSP . empty
    (8) instrucciones -> . instrucciones instruccion
    (9) instrucciones -> . instruccion
    (5) empty -> .
    (10) instruccion -> . imprimir_instr
    (11) instruccion -> . asignacion
    (12) instruccion -> . unset
    (13) instruccion -> . exit
    (14) instruccion -> . puntero
    (15) instruccion -> . go_to
    (16) instruccion -> . if_instruccion
    (17) instruccion -> . conversion
    (18) instruccion -> . acceso_lista_asigna
    (19) instruccion -> . read
    (20) instruccion -> . error
    (21) imprimir_instr -> . IMPRIMIR PARIZQ tipo_var PARDER PTCOMA
    (22) imprimir_instr -> . IMPRIMIR PARIZQ acceso_lista PARDER PTCOMA
    (23) imprimir_instr -> . IMPRIMIR PARIZQ CADENA PARDER PTCOMA
    (24) imprimir_instr -> . IMPRIMIR PARIZQ CADENA2 PARDER PTCOMA
    (40) asignacion -> . tipo_var IGUAL expresion PTCOMA
    (41) asignacion -> . tipo_var IGUAL ARRAY PARIZQ PARDER PTCOMA
    (35) unset -> . UNSET PARIZQ TEMP PARDER PTCOMA
    (36) unset -> . UNSET PARIZQ PARAM PARDER PTCOMA
    (37) unset -> . UNSET PARIZQ RET PARDER PTCOMA
    (38) unset -> . UNSET PARIZQ PILA PARDER PTCOMA
    (34) exit -> . EXIT PTCOMA
    (42) puntero -> . tipo_var IGUAL PAND tipo_var PTCOMA
    (32) go_to -> . GOTO ID PTCOMA
    (33) if_instruccion -> . IF PARIZQ expresion PARDER GOTO ID PTCOMA
    (43) conversion -> . tipo_var IGUAL PARIZQ tipo_dato PARDER primitiva PTCOMA
    (88) acceso_lista_asigna -> . tipo_var accesos IGUAL expresion PTCOMA
    (89) acceso_lista_asigna -> . tipo_var accesos IGUAL ARRAY PARIZQ PARDER PTCOMA
    (39) read -> . tipo_var IGUAL READ PARIZQ PARDER PTCOMA
    (47) tipo_var -> . TEMP
    (48) tipo_var -> . PARAM
    (49) tipo_var -> . RET
    (50) tipo_var -> . PILA
    (51) tipo_var -> . RA
    (52) tipo_var -> . PUNTERO

    ID              reduce using rule 5 (empty -> .)
    $end            reduce using rule 5 (empty -> .)
    error           shift and go to state 21
    IMPRIMIR        shift and go to state 22
    UNSET           shift and go to state 24
    EXIT            shift and go to state 29
    GOTO            shift and go to state 30
    IF              shift and go to state 31
    TEMP            shift and go to state 25
    PARAM           shift and go to state 26
    RET             shift and go to state 27
    PILA            shift and go to state 28
    RA              shift and go to state 32
    PUNTERO         shift and go to state 33

    instrucciones                  shift and go to state 8
    empty                          shift and go to state 9
    instruccion                    shift and go to state 10
    imprimir_instr                 shift and go to state 11
    asignacion                     shift and go to state 12
    unset                          shift and go to state 13
    exit                           shift and go to state 14
    puntero                        shift and go to state 15
    go_to                          shift and go to state 16
    if_instruccion                 shift and go to state 17
    conversion                     shift and go to state 18
    acceso_lista_asigna            shift and go to state 19
    read                           shift and go to state 20
    tipo_var                       shift and go to state 23

state 8

    (6) etiqueta -> ID DOSP instrucciones .
    (8) instrucciones -> instrucciones . instruccion
    (10) instruccion -> . imprimir_instr
    (11) instruccion -> . asignacion
    (12) instruccion -> . unset
    (13) instruccion -> . exit
    (14) instruccion -> . puntero
    (15) instruccion -> . go_to
    (16) instruccion -> . if_instruccion
    (17) instruccion -> . conversion
    (18) instruccion -> . acceso_lista_asigna
    (19) instruccion -> . read
    (20) instruccion -> . error
    (21) imprimir_instr -> . IMPRIMIR PARIZQ tipo_var PARDER PTCOMA
    (22) imprimir_instr -> . IMPRIMIR PARIZQ acceso_lista PARDER PTCOMA
    (23) imprimir_instr -> . IMPRIMIR PARIZQ CADENA PARDER PTCOMA
    (24) imprimir_instr -> . IMPRIMIR PARIZQ CADENA2 PARDER PTCOMA
    (40) asignacion -> . tipo_var IGUAL expresion PTCOMA
    (41) asignacion -> . tipo_var IGUAL ARRAY PARIZQ PARDER PTCOMA
    (35) unset -> . UNSET PARIZQ TEMP PARDER PTCOMA
    (36) unset -> . UNSET PARIZQ PARAM PARDER PTCOMA
    (37) unset -> . UNSET PARIZQ RET PARDER PTCOMA
    (38) unset -> . UNSET PARIZQ PILA PARDER PTCOMA
    (34) exit -> . EXIT PTCOMA
    (42) puntero -> . tipo_var IGUAL PAND tipo_var PTCOMA
    (32) go_to -> . GOTO ID PTCOMA
    (33) if_instruccion -> . IF PARIZQ expresion PARDER GOTO ID PTCOMA
    (43) conversion -> . tipo_var IGUAL PARIZQ tipo_dato PARDER primitiva PTCOMA
    (88) acceso_lista_asigna -> . tipo_var accesos IGUAL expresion PTCOMA
    (89) acceso_lista_asigna -> . tipo_var accesos IGUAL ARRAY PARIZQ PARDER PTCOMA
    (39) read -> . tipo_var IGUAL READ PARIZQ PARDER PTCOMA
    (47) tipo_var -> . TEMP
    (48) tipo_var -> . PARAM
    (49) tipo_var -> . RET
    (50) tipo_var -> . PILA
    (51) tipo_var -> . RA
    (52) tipo_var -> . PUNTERO

    ID              reduce using rule 6 (etiqueta -> ID DOSP instrucciones .)
    $end            reduce using rule 6 (etiqueta -> ID DOSP instrucciones .)
    error           shift and go to state 21
    IMPRIMIR        shift and go to state 22
    UNSET           shift and go to state 24
    EXIT            shift and go to state 29
    GOTO            shift and go to state 30
    IF              shift and go to state 31
    TEMP            shift and go to state 25
    PARAM           shift and go to state 26
    RET             shift and go to state 27
    PILA            shift and go to state 28
    RA              shift and go to state 32
    PUNTERO         shift and go to state 33

    instruccion                    shift and go to state 34
    imprimir_instr                 shift and go to state 11
    asignacion                     shift and go to state 12
    unset                          shift and go to state 13
    exit                           shift and go to state 14
    puntero                        shift and go to state 15
    go_to                          shift and go to state 16
    if_instruccion                 shift and go to state 17
    conversion                     shift and go to state 18
    acceso_lista_asigna            shift and go to state 19
    read                           shift and go to state 20
    tipo_var                       shift and go to state 23

state 9

    (7) etiqueta -> ID DOSP empty .

    ID              reduce using rule 7 (etiqueta -> ID DOSP empty .)
    $end            reduce using rule 7 (etiqueta -> ID DOSP empty .)


state 10

    (9) instrucciones -> instruccion .

    error           reduce using rule 9 (instrucciones -> instruccion .)
    IMPRIMIR        reduce using rule 9 (instrucciones -> instruccion .)
    UNSET           reduce using rule 9 (instrucciones -> instruccion .)
    EXIT            reduce using rule 9 (instrucciones -> instruccion .)
    GOTO            reduce using rule 9 (instrucciones -> instruccion .)
    IF              reduce using rule 9 (instrucciones -> instruccion .)
    TEMP            reduce using rule 9 (instrucciones -> instruccion .)
    PARAM           reduce using rule 9 (instrucciones -> instruccion .)
    RET             reduce using rule 9 (instrucciones -> instruccion .)
    PILA            reduce using rule 9 (instrucciones -> instruccion .)
    RA              reduce using rule 9 (instrucciones -> instruccion .)
    PUNTERO         reduce using rule 9 (instrucciones -> instruccion .)
    ID              reduce using rule 9 (instrucciones -> instruccion .)
    $end            reduce using rule 9 (instrucciones -> instruccion .)


state 11

    (10) instruccion -> imprimir_instr .

    error           reduce using rule 10 (instruccion -> imprimir_instr .)
    IMPRIMIR        reduce using rule 10 (instruccion -> imprimir_instr .)
    UNSET           reduce using rule 10 (instruccion -> imprimir_instr .)
    EXIT            reduce using rule 10 (instruccion -> imprimir_instr .)
    GOTO            reduce using rule 10 (instruccion -> imprimir_instr .)
    IF              reduce using rule 10 (instruccion -> imprimir_instr .)
    TEMP            reduce using rule 10 (instruccion -> imprimir_instr .)
    PARAM           reduce using rule 10 (instruccion -> imprimir_instr .)
    RET             reduce using rule 10 (instruccion -> imprimir_instr .)
    PILA            reduce using rule 10 (instruccion -> imprimir_instr .)
    RA              reduce using rule 10 (instruccion -> imprimir_instr .)
    PUNTERO         reduce using rule 10 (instruccion -> imprimir_instr .)
    ID              reduce using rule 10 (instruccion -> imprimir_instr .)
    $end            reduce using rule 10 (instruccion -> imprimir_instr .)


state 12

    (11) instruccion -> asignacion .

    error           reduce using rule 11 (instruccion -> asignacion .)
    IMPRIMIR        reduce using rule 11 (instruccion -> asignacion .)
    UNSET           reduce using rule 11 (instruccion -> asignacion .)
    EXIT            reduce using rule 11 (instruccion -> asignacion .)
    GOTO            reduce using rule 11 (instruccion -> asignacion .)
    IF              reduce using rule 11 (instruccion -> asignacion .)
    TEMP            reduce using rule 11 (instruccion -> asignacion .)
    PARAM           reduce using rule 11 (instruccion -> asignacion .)
    RET             reduce using rule 11 (instruccion -> asignacion .)
    PILA            reduce using rule 11 (instruccion -> asignacion .)
    RA              reduce using rule 11 (instruccion -> asignacion .)
    PUNTERO         reduce using rule 11 (instruccion -> asignacion .)
    ID              reduce using rule 11 (instruccion -> asignacion .)
    $end            reduce using rule 11 (instruccion -> asignacion .)


state 13

    (12) instruccion -> unset .

    error           reduce using rule 12 (instruccion -> unset .)
    IMPRIMIR        reduce using rule 12 (instruccion -> unset .)
    UNSET           reduce using rule 12 (instruccion -> unset .)
    EXIT            reduce using rule 12 (instruccion -> unset .)
    GOTO            reduce using rule 12 (instruccion -> unset .)
    IF              reduce using rule 12 (instruccion -> unset .)
    TEMP            reduce using rule 12 (instruccion -> unset .)
    PARAM           reduce using rule 12 (instruccion -> unset .)
    RET             reduce using rule 12 (instruccion -> unset .)
    PILA            reduce using rule 12 (instruccion -> unset .)
    RA              reduce using rule 12 (instruccion -> unset .)
    PUNTERO         reduce using rule 12 (instruccion -> unset .)
    ID              reduce using rule 12 (instruccion -> unset .)
    $end            reduce using rule 12 (instruccion -> unset .)


state 14

    (13) instruccion -> exit .

    error           reduce using rule 13 (instruccion -> exit .)
    IMPRIMIR        reduce using rule 13 (instruccion -> exit .)
    UNSET           reduce using rule 13 (instruccion -> exit .)
    EXIT            reduce using rule 13 (instruccion -> exit .)
    GOTO            reduce using rule 13 (instruccion -> exit .)
    IF              reduce using rule 13 (instruccion -> exit .)
    TEMP            reduce using rule 13 (instruccion -> exit .)
    PARAM           reduce using rule 13 (instruccion -> exit .)
    RET             reduce using rule 13 (instruccion -> exit .)
    PILA            reduce using rule 13 (instruccion -> exit .)
    RA              reduce using rule 13 (instruccion -> exit .)
    PUNTERO         reduce using rule 13 (instruccion -> exit .)
    ID              reduce using rule 13 (instruccion -> exit .)
    $end            reduce using rule 13 (instruccion -> exit .)


state 15

    (14) instruccion -> puntero .

    error           reduce using rule 14 (instruccion -> puntero .)
    IMPRIMIR        reduce using rule 14 (instruccion -> puntero .)
    UNSET           reduce using rule 14 (instruccion -> puntero .)
    EXIT            reduce using rule 14 (instruccion -> puntero .)
    GOTO            reduce using rule 14 (instruccion -> puntero .)
    IF              reduce using rule 14 (instruccion -> puntero .)
    TEMP            reduce using rule 14 (instruccion -> puntero .)
    PARAM           reduce using rule 14 (instruccion -> puntero .)
    RET             reduce using rule 14 (instruccion -> puntero .)
    PILA            reduce using rule 14 (instruccion -> puntero .)
    RA              reduce using rule 14 (instruccion -> puntero .)
    PUNTERO         reduce using rule 14 (instruccion -> puntero .)
    ID              reduce using rule 14 (instruccion -> puntero .)
    $end            reduce using rule 14 (instruccion -> puntero .)


state 16

    (15) instruccion -> go_to .

    error           reduce using rule 15 (instruccion -> go_to .)
    IMPRIMIR        reduce using rule 15 (instruccion -> go_to .)
    UNSET           reduce using rule 15 (instruccion -> go_to .)
    EXIT            reduce using rule 15 (instruccion -> go_to .)
    GOTO            reduce using rule 15 (instruccion -> go_to .)
    IF              reduce using rule 15 (instruccion -> go_to .)
    TEMP            reduce using rule 15 (instruccion -> go_to .)
    PARAM           reduce using rule 15 (instruccion -> go_to .)
    RET             reduce using rule 15 (instruccion -> go_to .)
    PILA            reduce using rule 15 (instruccion -> go_to .)
    RA              reduce using rule 15 (instruccion -> go_to .)
    PUNTERO         reduce using rule 15 (instruccion -> go_to .)
    ID              reduce using rule 15 (instruccion -> go_to .)
    $end            reduce using rule 15 (instruccion -> go_to .)


state 17

    (16) instruccion -> if_instruccion .

    error           reduce using rule 16 (instruccion -> if_instruccion .)
    IMPRIMIR        reduce using rule 16 (instruccion -> if_instruccion .)
    UNSET           reduce using rule 16 (instruccion -> if_instruccion .)
    EXIT            reduce using rule 16 (instruccion -> if_instruccion .)
    GOTO            reduce using rule 16 (instruccion -> if_instruccion .)
    IF              reduce using rule 16 (instruccion -> if_instruccion .)
    TEMP            reduce using rule 16 (instruccion -> if_instruccion .)
    PARAM           reduce using rule 16 (instruccion -> if_instruccion .)
    RET             reduce using rule 16 (instruccion -> if_instruccion .)
    PILA            reduce using rule 16 (instruccion -> if_instruccion .)
    RA              reduce using rule 16 (instruccion -> if_instruccion .)
    PUNTERO         reduce using rule 16 (instruccion -> if_instruccion .)
    ID              reduce using rule 16 (instruccion -> if_instruccion .)
    $end            reduce using rule 16 (instruccion -> if_instruccion .)


state 18

    (17) instruccion -> conversion .

    error           reduce using rule 17 (instruccion -> conversion .)
    IMPRIMIR        reduce using rule 17 (instruccion -> conversion .)
    UNSET           reduce using rule 17 (instruccion -> conversion .)
    EXIT            reduce using rule 17 (instruccion -> conversion .)
    GOTO            reduce using rule 17 (instruccion -> conversion .)
    IF              reduce using rule 17 (instruccion -> conversion .)
    TEMP            reduce using rule 17 (instruccion -> conversion .)
    PARAM           reduce using rule 17 (instruccion -> conversion .)
    RET             reduce using rule 17 (instruccion -> conversion .)
    PILA            reduce using rule 17 (instruccion -> conversion .)
    RA              reduce using rule 17 (instruccion -> conversion .)
    PUNTERO         reduce using rule 17 (instruccion -> conversion .)
    ID              reduce using rule 17 (instruccion -> conversion .)
    $end            reduce using rule 17 (instruccion -> conversion .)


state 19

    (18) instruccion -> acceso_lista_asigna .

    error           reduce using rule 18 (instruccion -> acceso_lista_asigna .)
    IMPRIMIR        reduce using rule 18 (instruccion -> acceso_lista_asigna .)
    UNSET           reduce using rule 18 (instruccion -> acceso_lista_asigna .)
    EXIT            reduce using rule 18 (instruccion -> acceso_lista_asigna .)
    GOTO            reduce using rule 18 (instruccion -> acceso_lista_asigna .)
    IF              reduce using rule 18 (instruccion -> acceso_lista_asigna .)
    TEMP            reduce using rule 18 (instruccion -> acceso_lista_asigna .)
    PARAM           reduce using rule 18 (instruccion -> acceso_lista_asigna .)
    RET             reduce using rule 18 (instruccion -> acceso_lista_asigna .)
    PILA            reduce using rule 18 (instruccion -> acceso_lista_asigna .)
    RA              reduce using rule 18 (instruccion -> acceso_lista_asigna .)
    PUNTERO         reduce using rule 18 (instruccion -> acceso_lista_asigna .)
    ID              reduce using rule 18 (instruccion -> acceso_lista_asigna .)
    $end            reduce using rule 18 (instruccion -> acceso_lista_asigna .)


state 20

    (19) instruccion -> read .

    error           reduce using rule 19 (instruccion -> read .)
    IMPRIMIR        reduce using rule 19 (instruccion -> read .)
    UNSET           reduce using rule 19 (instruccion -> read .)
    EXIT            reduce using rule 19 (instruccion -> read .)
    GOTO            reduce using rule 19 (instruccion -> read .)
    IF              reduce using rule 19 (instruccion -> read .)
    TEMP            reduce using rule 19 (instruccion -> read .)
    PARAM           reduce using rule 19 (instruccion -> read .)
    RET             reduce using rule 19 (instruccion -> read .)
    PILA            reduce using rule 19 (instruccion -> read .)
    RA              reduce using rule 19 (instruccion -> read .)
    PUNTERO         reduce using rule 19 (instruccion -> read .)
    ID              reduce using rule 19 (instruccion -> read .)
    $end            reduce using rule 19 (instruccion -> read .)


state 21

    (20) instruccion -> error .

    error           reduce using rule 20 (instruccion -> error .)
    IMPRIMIR        reduce using rule 20 (instruccion -> error .)
    UNSET           reduce using rule 20 (instruccion -> error .)
    EXIT            reduce using rule 20 (instruccion -> error .)
    GOTO            reduce using rule 20 (instruccion -> error .)
    IF              reduce using rule 20 (instruccion -> error .)
    TEMP            reduce using rule 20 (instruccion -> error .)
    PARAM           reduce using rule 20 (instruccion -> error .)
    RET             reduce using rule 20 (instruccion -> error .)
    PILA            reduce using rule 20 (instruccion -> error .)
    RA              reduce using rule 20 (instruccion -> error .)
    PUNTERO         reduce using rule 20 (instruccion -> error .)
    ID              reduce using rule 20 (instruccion -> error .)
    $end            reduce using rule 20 (instruccion -> error .)


state 22

    (21) imprimir_instr -> IMPRIMIR . PARIZQ tipo_var PARDER PTCOMA
    (22) imprimir_instr -> IMPRIMIR . PARIZQ acceso_lista PARDER PTCOMA
    (23) imprimir_instr -> IMPRIMIR . PARIZQ CADENA PARDER PTCOMA
    (24) imprimir_instr -> IMPRIMIR . PARIZQ CADENA2 PARDER PTCOMA

    PARIZQ          shift and go to state 35


state 23

    (40) asignacion -> tipo_var . IGUAL expresion PTCOMA
    (41) asignacion -> tipo_var . IGUAL ARRAY PARIZQ PARDER PTCOMA
    (42) puntero -> tipo_var . IGUAL PAND tipo_var PTCOMA
    (43) conversion -> tipo_var . IGUAL PARIZQ tipo_dato PARDER primitiva PTCOMA
    (88) acceso_lista_asigna -> tipo_var . accesos IGUAL expresion PTCOMA
    (89) acceso_lista_asigna -> tipo_var . accesos IGUAL ARRAY PARIZQ PARDER PTCOMA
    (39) read -> tipo_var . IGUAL READ PARIZQ PARDER PTCOMA
    (90) accesos -> . accesos acceso
    (91) accesos -> . acceso
    (92) acceso -> . CORIZQ primitiva CORDER

    IGUAL           shift and go to state 36
    CORIZQ          shift and go to state 39

    accesos                        shift and go to state 37
    acceso                         shift and go to state 38

state 24

    (35) unset -> UNSET . PARIZQ TEMP PARDER PTCOMA
    (36) unset -> UNSET . PARIZQ PARAM PARDER PTCOMA
    (37) unset -> UNSET . PARIZQ RET PARDER PTCOMA
    (38) unset -> UNSET . PARIZQ PILA PARDER PTCOMA

    PARIZQ          shift and go to state 40


state 25

    (47) tipo_var -> TEMP .

    IGUAL           reduce using rule 47 (tipo_var -> TEMP .)
    CORIZQ          reduce using rule 47 (tipo_var -> TEMP .)
    PARDER          reduce using rule 47 (tipo_var -> TEMP .)
    PTCOMA          reduce using rule 47 (tipo_var -> TEMP .)


state 26

    (48) tipo_var -> PARAM .

    IGUAL           reduce using rule 48 (tipo_var -> PARAM .)
    CORIZQ          reduce using rule 48 (tipo_var -> PARAM .)
    PARDER          reduce using rule 48 (tipo_var -> PARAM .)
    PTCOMA          reduce using rule 48 (tipo_var -> PARAM .)


state 27

    (49) tipo_var -> RET .

    IGUAL           reduce using rule 49 (tipo_var -> RET .)
    CORIZQ          reduce using rule 49 (tipo_var -> RET .)
    PARDER          reduce using rule 49 (tipo_var -> RET .)
    PTCOMA          reduce using rule 49 (tipo_var -> RET .)


state 28

    (50) tipo_var -> PILA .

    IGUAL           reduce using rule 50 (tipo_var -> PILA .)
    CORIZQ          reduce using rule 50 (tipo_var -> PILA .)
    PARDER          reduce using rule 50 (tipo_var -> PILA .)
    PTCOMA          reduce using rule 50 (tipo_var -> PILA .)


state 29

    (34) exit -> EXIT . PTCOMA

    PTCOMA          shift and go to state 41


state 30

    (32) go_to -> GOTO . ID PTCOMA

    ID              shift and go to state 42


state 31

    (33) if_instruccion -> IF . PARIZQ expresion PARDER GOTO ID PTCOMA

    PARIZQ          shift and go to state 43


state 32

    (51) tipo_var -> RA .

    IGUAL           reduce using rule 51 (tipo_var -> RA .)
    CORIZQ          reduce using rule 51 (tipo_var -> RA .)
    PARDER          reduce using rule 51 (tipo_var -> RA .)
    PTCOMA          reduce using rule 51 (tipo_var -> RA .)


state 33

    (52) tipo_var -> PUNTERO .

    IGUAL           reduce using rule 52 (tipo_var -> PUNTERO .)
    CORIZQ          reduce using rule 52 (tipo_var -> PUNTERO .)
    PARDER          reduce using rule 52 (tipo_var -> PUNTERO .)
    PTCOMA          reduce using rule 52 (tipo_var -> PUNTERO .)


state 34

    (8) instrucciones -> instrucciones instruccion .

    error           reduce using rule 8 (instrucciones -> instrucciones instruccion .)
    IMPRIMIR        reduce using rule 8 (instrucciones -> instrucciones instruccion .)
    UNSET           reduce using rule 8 (instrucciones -> instrucciones instruccion .)
    EXIT            reduce using rule 8 (instrucciones -> instrucciones instruccion .)
    GOTO            reduce using rule 8 (instrucciones -> instrucciones instruccion .)
    IF              reduce using rule 8 (instrucciones -> instrucciones instruccion .)
    TEMP            reduce using rule 8 (instrucciones -> instrucciones instruccion .)
    PARAM           reduce using rule 8 (instrucciones -> instrucciones instruccion .)
    RET             reduce using rule 8 (instrucciones -> instrucciones instruccion .)
    PILA            reduce using rule 8 (instrucciones -> instrucciones instruccion .)
    RA              reduce using rule 8 (instrucciones -> instrucciones instruccion .)
    PUNTERO         reduce using rule 8 (instrucciones -> instrucciones instruccion .)
    ID              reduce using rule 8 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 8 (instrucciones -> instrucciones instruccion .)


state 35

    (21) imprimir_instr -> IMPRIMIR PARIZQ . tipo_var PARDER PTCOMA
    (22) imprimir_instr -> IMPRIMIR PARIZQ . acceso_lista PARDER PTCOMA
    (23) imprimir_instr -> IMPRIMIR PARIZQ . CADENA PARDER PTCOMA
    (24) imprimir_instr -> IMPRIMIR PARIZQ . CADENA2 PARDER PTCOMA
    (47) tipo_var -> . TEMP
    (48) tipo_var -> . PARAM
    (49) tipo_var -> . RET
    (50) tipo_var -> . PILA
    (51) tipo_var -> . RA
    (52) tipo_var -> . PUNTERO
    (87) acceso_lista -> . tipo_var accesos
